chore: add dir to package.json files

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "files": [
     "dist",
     "i18n",
+    "codemods",
     "materials/custom-properties.css",
     "materials/custom-properties.json",
     "materials/custom-properties.js",
