--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "files": [
     "dist",
     "i18n",
+    "codemods",
     "materials/custom-properties.css",
     "materials/custom-properties.json",
     "materials/custom-properties.js",
@@ -166,6 +167,8 @@
     "moment-timezone": "0.5.25",
     "mri": "1.1.4",
     "omit-empty": "1.0.0",
+    "postcss": "7.0.17",
+    "postcss-value-parser": "4.0.0",
     "pptr-testing-library": "0.4.0",
     "prettier": "1.18.2",
     "puppeteer": "1.18.0",
