--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,6 +34,7 @@ commands:
     description: 'Building artifacts'
     steps:
       - run: yarn build
+      - run: yarn bundlesize
   save_workspace:
     steps:
       - persist_to_workspace:
@@ -56,10 +57,6 @@ commands:
     description: 'Running bundle tests'
     steps:
       - run: yarn run jest --projects jest.bundle.config.js --maxWorkers=3 --reporters jest-silent-reporter
-  bundle_size_test:
-    description: 'Running bundle size'
-    steps:
-      - run: yarn run test:bundlesize
   vrt_test:
     description: 'Running Visual Regression Tests'
     steps:
@@ -135,12 +132,6 @@ jobs:
       - install_dependencies
       - restore_workspace
       - bundle_test
-  bundle_size_test:
-    executor: node_10
-    steps:
-      - install_dependencies
-      - restore_workspace
-      - bundle_size_test
   vrt_test:
     executor: node_10
     steps:
@@ -167,12 +158,6 @@ workflows:
             tags:
               only: /v[\.0-9]+.*/
       - bundle_test:
-          requires:
-            - build
-          filters:
-            tags:
-              only: /v[\.0-9]+.*/
-      - bundle_size_test:
           requires:
             - build
           filters:
