--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "test": "jest --config jest.test.config.js",
     "test:watch": "jest --config jest.test.config.js --watch",
     "test:bundle": "jest --config jest.bundle.config.js",
+    "bundlesize": "bundlesize",
     "test:bundle:watch": "jest --config jest.bundle.config.js --watch",
     "release:next": "yarn publish --tag next",
     "percy": "percy exec -- jest --config jest.visual.config.js --runInBand",
@@ -122,6 +123,7 @@
     "babel-plugin-transform-rename-import": "2.3.0",
     "babel-preset-jest": "24.6.0",
     "browserslist": "4.6.3",
+    "bundlesize": "0.18.0",
     "clean-webpack-plugin": "3.0.0",
     "colors": "1.3.3",
     "common-tags": "1.8.0",
