--- a/package.json
+++ b/package.json
@@ -53,11 +53,11 @@
     "format:js": "prettier --write '**/*.js'",
     "format:md": "prettier --write --parser markdown '**/*.md'",
     "format:yaml": "prettier --write --parser yaml '**/*.yaml'",
-    "test": "cross-env NODE_ICU_DATA=node_modules/full-icu jest --config jest.test.config.js",
-    "test:watch": "cross-env NODE_ICU_DATA=node_modules/full-icu jest --config jest.test.config.js --watch",
-    "test:bundle": "cross-env cross-env NODE_ICU_DATA=node_modules/full-icu jest --config jest.bundle.config.js",
+    "test": "jest --config jest.test.config.js",
+    "test:watch": "jest --config jest.test.config.js --watch",
+    "test:bundle": "cross-env jest --config jest.bundle.config.js",
     "bundlesize": "bundlesize",
-    "test:bundle:watch": "cross-env NODE_ICU_DATA=node_modules/full-icu jest --config jest.bundle.config.js --watch",
+    "test:bundle:watch": "jest --config jest.bundle.config.js --watch",
     "release:next": "yarn publish --tag next",
     "percy": "percy exec -- jest --config jest.visual.config.js --runInBand",
     "visual-testing-app:build": "NODE_ENV=production webpack --config visual-testing-app/webpack.config.js",
@@ -143,7 +143,6 @@
     "eslint-plugin-prettier": "3.1.0",
     "eslint-plugin-react": "7.14.2",
     "formik": "1.5.7",
-    "full-icu": "1.3.0",
     "glob": "7.1.4",
     "global": "4.4.0",
     "history": "4.9.0",
@@ -151,6 +150,7 @@
     "html-webpack-plugin": "3.2.0",
     "husky": "2.7.0",
     "identity-obj-proxy": "3.0.0",
+    "intl": "1.2.5",
     "jest": "24.8.0",
     "jest-dom": "3.5.0",
     "jest-enzyme": "7.0.2",
