--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "format:yaml": "prettier --write --parser yaml '**/*.yaml'",
     "test": "jest --config jest.test.config.js",
     "test:watch": "jest --config jest.test.config.js --watch",
-    "test:bundle": "cross-env jest --config jest.bundle.config.js",
+    "test:bundle": "jest --config jest.bundle.config.js",
     "bundlesize": "bundlesize",
     "test:bundle:watch": "jest --config jest.bundle.config.js --watch",
     "release:next": "yarn publish --tag next",
