--- a/package.json
+++ b/package.json
@@ -150,6 +150,7 @@
     "html-webpack-plugin": "3.2.0",
     "husky": "3.0.0",
     "identity-obj-proxy": "3.0.0",
+    "intl": "1.2.5",
     "jest": "24.8.0",
     "jest-dom": "3.5.0",
     "jest-enzyme": "7.0.2",
@@ -178,7 +179,7 @@
     "rcfile": "1.0.3",
     "react": "16.8.6",
     "react-dom": "16.8.6",
-    "react-intl": "2.9.0",
+    "react-intl": "3.0.0-beta.14",
     "react-router-dom": "5.0.1",
     "react-value": "0.2.0",
     "rimraf": "2.6.3",
@@ -206,7 +207,7 @@
     "moment-timezone": "0.5.x",
     "react": ">= 16.8.0",
     "react-dom": ">= 16.8.0",
-    "react-intl": "2.x",
+    "react-intl": "3.x",
     "react-router-dom": "5.x"
   },
   "resolutions": {
