--- a/materials/internals/definition.yaml
+++ b/materials/internals/definition.yaml
@@ -4,7 +4,7 @@
 # design system. Those are things like which colors are we using,
 # which border radius, spacing, shadows and so on.
 #
-# The file also lists the states and comopnent groups for which we apply design
+# The file also lists the states and component groups for which we apply design
 # tokens. The explicit list of states aims to prevent diversion, e.g. by using
 # both "-hover" and "-hovered".
 #
@@ -30,31 +30,6 @@ choiceGroups:
     prefix: color
     description: All colors in the system
     choices:
-      color-green: '#00b39e'
-      color-green-25: 'hsl(172.9608938547486, 100%, 25%)'
-      color-green-40: 'hsl(172.9608938547486, 100%, 40%)'
-      color-green-85: 'hsl(172.9608938547486, 100%, 85%)'
-      color-green-95: 'hsl(172.9608938547486, 100%, 95%)'
-      color-navy: '#213c45'
-      color-navy-30: 'hsl(195, 35.2941176471%, 30%)'
-      color-navy-40: 'hsl(195, 35.2941176471%, 40%)'
-      color-navy-95: 'hsl(195, 35.2941176471%, 95%)'
-      color-navy-98: 'hsl(195, 35.2941176471%, 98%)'
-      color-gray: '#ccc'
-      color-gray-60: 'hsl(0, 0%, 60%)'
-      color-gray-90: 'hsl(0, 0%, 90%)'
-      color-gray-95: 'hsl(0, 0%, 95%)'
-      color-blue: '#078cdf'
-      color-blue-85: 'hsl(203.05555555555554, 93.9130434783%, 85%)'
-      color-blue-95: 'hsl(203.05555555555554, 93.9130434783%, 95%)'
-      color-orange: '#f16d0e'
-      color-orange-95: 'hsl(25.110132158590307, 89.0196078431%, 95%)'
-      color-red: '#e60050'
-      color-red-95: 'hsl(339.1304347826087, 100%, 95%)'
-      color-purple: '#b866ff'
-      color-black: '#1a1a1a'
-      color-white: '#fff'
-      ## new
       color-primary: '#00b39e'
       color-primary-25: 'hsl(172.9608938547486, 100%, 25%)'
       color-primary-40: 'hsl(172.9608938547486, 100%, 40%)'
@@ -132,11 +107,6 @@ choiceGroups:
     label: Spacings
     prefix: spacing
     choices:
-      spacing-4: 4px
-      spacing-8: 8px
-      spacing-16: 16px
-      spacing-24: 24px
-      spacing-32: 32px
       spacing-xs: 4px
       spacing-s: 8px
       spacing-m: 16px
@@ -148,7 +118,7 @@ choiceGroups:
     choices:
       transition-linear-80ms: '80ms linear'
       transition-easeinout-150ms: '150ms ease-in-out'
-      transition-standard: 'all 0.2s ease'
+      transition-standard: '200ms ease'
   breakpoints:
     label: Breakpoints
     prefix: break-point
@@ -188,45 +158,8 @@ decisionGroups:
     label: Background Colors
     prefix: background-color
     decisions:
-      background-color-input-pristine:
-        description: ''
-        deprecated: true
-        choice: color-surface
-      background-color-input-disabled:
-        description: ''
-        deprecated: true
-        choice: color-accent-98
-      background-color-input-hover:
-        description: ''
-        deprecated: true
-        choice: color-neutral-90
-      background-color-input-selected:
-        description: ''
-        deprecated: true
-        choice: color-accent-95
-      background-color-tag-pristine:
-        description: ''
-        deprecated: true
-        choice: color-neutral-95
-      background-color-tag-warning:
-        description: ''
-        deprecated: true
-        choice: color-warning-95
-      background-color-tag-disabled:
-        description: ''
-        deprecated: true
-        choice: color-neutral-95
-      background-color-tag-normal-hover:
-        description: ''
-        deprecated: true
-        choice: color-neutral-60
-      background-color-tag-warning-hover:
-        description: ''
-        deprecated: true
-        choice: color-warning
       background-color-for-input:
         description: ''
-        deprecated: false
         choice: color-surface
       background-color-for-input-when-selected:
         description: ''
@@ -248,50 +181,6 @@ decisionGroups:
     label: Border Colors
     prefix: border-color
     decisions:
-      border-color-input-pristine:
-        description: ''
-        deprecated: true
-        choice: color-neutral-60
-      border-color-input-focus:
-        description: ''
-        deprecated: true
-        choice: color-primary
-      border-color-input-disabled:
-        description: ''
-        deprecated: true
-        choice: color-neutral
-      border-color-input-readonly:
-        description: ''
-        deprecated: true
-        choice: color-neutral
-      border-color-input-error:
-        description: ''
-        deprecated: true
-        choice: color-error
-      border-color-input-warning:
-        description: ''
-        deprecated: true
-        choice: color-warning
-      border-color-tag-pristine:
-        description: ''
-        deprecated: true
-        choice: color-neutral-60
-      border-color-tag-warning:
-        description: ''
-        deprecated: true
-        choice: color-warning
-      border-color-tag-focus:
-        description: ''
-        deprecated: true
-        choice: color-primary
-      border-color-tag-warning-hover:
-        description: ''
-        deprecated: true
-        choice: color-warning
-      border-color-separator:
-        description: ''
-        deprecated: true
-        choice: color-neutral
       border-color-for-input:
         description: ''
         choice: color-neutral-60
@@ -324,14 +213,6 @@ decisionGroups:
     label: Border Radius
     prefix: border-radius
     decisions:
-      border-radius-input:
-        description: ''
-        deprecated: true
-        choice: border-radius-6
-      border-radius-tag:
-        description: ''
-        deprecated: true
-        choice: border-radius-2
       border-radius-for-input:
         description: ''
         choice: border-radius-6
@@ -345,34 +226,6 @@ decisionGroups:
     label: Font Colors
     prefix: font-color
     decisions:
-      font-color-default:
-        description: ''
-        deprecated: true
-        choice: color-solid
-      font-color-disabled:
-        description: ''
-        deprecated: true
-        choice: color-neutral-60
-      font-color-error:
-        description: ''
-        deprecated: true
-        choice: color-error
-      font-color-success:
-        description: ''
-        deprecated: true
-        choice: color-primary
-      font-color-warning:
-        description: ''
-        deprecated: true
-        choice: color-warning
-      font-color-readonly:
-        description: ''
-        deprecated: true
-        choice: color-neutral-60
-      font-color-placeholder:
-        description: ''
-        deprecated: true
-        choice: color-neutral-60
       font-color-for-input:
         description: ''
         choice: color-solid
@@ -441,32 +294,6 @@ plainTokens:
   big-button-height: 32px
   small-button-height: 24px
   size-height-input: 32px
-  shadow-1-first: '0 1px 3px rgba(0, 0, 0, 0.12)'
-  shadow-1-second: '0 1px 2px rgba(0, 0, 0, 0.24)'
-  shadow-2-first: '0 3px 6px rgba(0, 0, 0, 0.16)'
-  shadow-2-second: '0 3px 6px rgba(0, 0, 0, 0.23)'
-  shadow-3-first: '0 10px 20px rgba(0, 0, 0, 0.19)'
-  shadow-3-second: '0 6px 6px rgba(0, 0, 0, 0.23)'
-  shadow-4-first: '0 14px 28px rgba(0, 0, 0, 0.25)'
-  shadow-4-second: '0 10px 10px rgba(0, 0, 0, 0.22)'
-  shadow-5-first: '0 19px 38px rgba(0, 0, 0, 0.3)'
-  shadow-5-second: '0 15px 12px rgba(0, 0, 0, 0.22)'
-  shadow-6-first: '0 -1px 2px 0 rgba(0, 0, 0, 0.2)'
-  shadow-7-first: '0 -1px 1.5px 0 rgba(0, 0, 0, 0.12)'
-  shadow-7-second: '0 1px 1px 0 rgba(0, 0, 0, 0.24)'
-  shadow-8-first: '0 1px 9.5px 0 rgba(0, 0, 0, 0.12)'
-  shadow-8-second: '0 2px 4px 0 rgba(0, 0, 0, 0.24)'
-  shadow-9-first: 'inset 0 -1px 3px 0 rgba(0, 0, 0, 0.1)'
-  shadow-9-second: 'inset 0 1px 1.5px 0 rgba(0, 0, 0, 0.2)'
-  shadow-9-third: 'inset 0 1px 1.5px 0 rgba(0, 0, 0, 0.25)'
-  shadow-10-first: '0 0 0 1px rgba(224, 230, 237, 0.5)'
-  shadow-11-first: '0 1px 0.5px rgba(0, 0, 0, 0.24)'
-  shadow-11-second: '0 -1px 0.75px rgba(0, 0, 0, 0.12)'
-  shadow-12-first: '0 0 1px rgba(0, 0, 0, 0.25)'
-  shadow-13-first: '0 0 1px rgba(0, 0, 0, 0.25)'
-  shadow-14-first: '0 0 0.5px rgba(0, 0, 0, 0.1)'
-  shadow-15-first: '0 2px 2px rgba(0, 0, 0, 0.24)'
-  shadow-15-second: '0 1px 4.75px rgba(0, 0, 0, 0.12)'
   font-family-default: "'Open Sans', sans-serif"
   font-size-default: 1rem
   font-size-small: 0.9231rem
