--- a/package.json
+++ b/package.json
@@ -144,6 +144,7 @@
     "eslint-plugin-prefer-object-spread": "1.2.1",
     "eslint-plugin-prettier": "3.1.0",
     "eslint-plugin-react": "7.14.2",
+    "eslint-plugin-react-hooks": "1.6.1",
     "formik": "1.5.8",
     "glob": "7.1.4",
     "global": "4.4.0",
