--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,7 @@ commands:
     steps:
       - checkout
       - restore_cache: *restore_yarn_cache
-      - run: yarn install --pure-lockfile
+      - run: yarn install --frozen-lockfile
       - save_cache: *save_yarn_cache
   build_artifacts:
     description: 'Building artifacts'
