chore: generate custom-properties.ts

--- a/package.json
+++ b/package.json
@@ -19,9 +19,7 @@
     "dist",
     "i18n",
     "codemods",
-    "materials/custom-properties.css",
-    "materials/custom-properties.json",
-    "materials/custom-properties.js",
+    "materials/custom-properties.*",
     "CHANGELOG.md",
     "README.md",
     "transforms",
