--- a/package.json
+++ b/package.json
@@ -74,12 +74,12 @@
     "lodash-es": "4.17.15",
     "prop-types": "15.7.2",
     "react-is": "16.8.6",
-    "react-popper": "1.3.3",
     "react-required-if": "1.0.3",
     "react-select": "3.0.4",
     "react-textarea-autosize": "7.1.0",
     "react-virtualized": "9.21.1",
     "tiny-invariant": "1.0.6",
+    "use-popper": "1.1.5",
     "warning": "4.0.3"
   },
   "devDependencies": {
