--- a/package.json
+++ b/package.json
@@ -111,12 +111,12 @@
     "@svgr/rollup": "4.3.2",
     "@svgr/webpack": "4.3.2",
     "@testing-library/jest-dom": "4.0.0",
-    "@testing-library/react": "8.0.7",
+    "@testing-library/react": "8.0.8",
     "babel-eslint": "10.0.2",
     "babel-jest": "24.8.0",
     "babel-loader": "8.0.6",
     "babel-plugin-module-rewrite": "0.2.0",
-    "babel-plugin-react-intl": "4.1.5",
+    "babel-plugin-react-intl": "4.1.6",
     "babel-plugin-transform-dynamic-import": "2.1.0",
     "babel-plugin-transform-react-remove-prop-types": "0.4.24",
     "babel-plugin-transform-rename-import": "2.3.0",
@@ -153,7 +153,7 @@
     "identity-obj-proxy": "3.0.0",
     "intl": "1.2.5",
     "jest": "24.8.0",
-    "jest-enzyme": "7.0.2",
+    "jest-enzyme": "7.1.0",
     "jest-localstorage-mock": "2.4.0",
     "jest-puppeteer": "4.3.0",
     "jest-runner-eslint": "0.7.4",
@@ -171,7 +171,7 @@
     "mri": "1.1.4",
     "omit-empty": "1.0.0",
     "postcss": "7.0.17",
-    "postcss-value-parser": "4.0.0",
+    "postcss-value-parser": "4.0.1",
     "pptr-testing-library": "0.4.0",
     "prettier": "1.18.2",
     "puppeteer": "1.19.0",
@@ -179,11 +179,11 @@
     "rcfile": "1.0.3",
     "react": "16.8.6",
     "react-dom": "16.8.6",
-    "react-intl": "3.0.0-beta.23",
+    "react-intl": "3.1.1",
     "react-router-dom": "5.0.1",
     "react-value": "0.2.0",
     "rimraf": "2.6.3",
-    "rollup": "1.18.0",
+    "rollup": "1.19.4",
     "rollup-plugin-babel": "4.3.3",
     "rollup-plugin-cleanup": "3.1.1",
     "rollup-plugin-commonjs": "10.0.2",
