--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
     "@svgr/webpack": "4.3.2",
     "@testing-library/jest-dom": "4.0.0",
     "@testing-library/react": "8.0.8",
+    "@testing-library/react-hooks": "^1.1.0",
     "babel-eslint": "10.0.2",
     "babel-jest": "24.8.0",
     "babel-loader": "8.0.6",
