--- a/package.json
+++ b/package.json
@@ -52,8 +52,8 @@
     "format:js": "prettier --write '**/*.js'",
     "format:md": "prettier --write --parser markdown '**/*.md'",
     "format:yaml": "prettier --write --parser yaml '**/*.yaml'",
-    "test": "jest --config jest.test.config.js",
-    "test:watch": "jest --config jest.test.config.js --watch",
+    "test": "cross-env NODE_ICU_DATA=./vendors/full-icu jest --config jest.test.config.js",
+    "test:watch": "cross-env NODE_ICU_DATA=./vendors/full-icu jest --config jest.test.config.js --watch",
     "test:bundle": "jest --config jest.bundle.config.js",
     "bundlesize": "bundlesize",
     "test:bundle:watch": "jest --config jest.bundle.config.js --watch",
@@ -151,7 +151,7 @@
     "html-webpack-plugin": "3.2.0",
     "husky": "3.0.4",
     "identity-obj-proxy": "3.0.0",
-    "intl": "1.2.5",
+    "intl-pluralrules": "^1.0.3",
     "jest": "24.9.0",
     "jest-enzyme": "7.1.0",
     "jest-localstorage-mock": "2.4.0",
