--- a/package.json
+++ b/package.json
@@ -52,8 +52,9 @@
     "format:js": "prettier --write '**/*.js'",
     "format:md": "prettier --write --parser markdown '**/*.md'",
     "format:yaml": "prettier --write --parser yaml '**/*.yaml'",
-    "test": "cross-env NODE_ICU_DATA=./vendors/full-icu jest --config jest.test.config.js",
-    "test:watch": "cross-env NODE_ICU_DATA=./vendors/full-icu jest --config jest.test.config.js --watch",
+    "postinstall": "cd vendors && npm install",
+    "test": "cross-env NODE_ICU_DATA=./vendors/node_modules/full-icu jest --config jest.test.config.js",
+    "test:watch": "cross-env NODE_ICU_DATA=./vendors/node_modules/full-icu jest --config jest.test.config.js --watch",
     "test:bundle": "jest --config jest.bundle.config.js",
     "bundlesize": "bundlesize",
     "test:bundle:watch": "jest --config jest.bundle.config.js --watch",
