--- a/package.json
+++ b/package.json
@@ -152,7 +152,7 @@
     "html-webpack-plugin": "3.2.0",
     "husky": "3.0.4",
     "identity-obj-proxy": "3.0.0",
-    "intl-pluralrules": "^1.0.3",
+    "intl-pluralrules": "1.0.3",
     "jest": "24.9.0",
     "jest-enzyme": "7.1.0",
     "jest-localstorage-mock": "2.4.0",
