chore: add basic serializer

--- a/package.json
+++ b/package.json
@@ -70,10 +70,10 @@
     "common-tags": "1.8.0",
     "dom-helpers": "5.0.1",
     "downshift": "3.2.12",
+    "immutable": "4.0.0-rc.12",
     "is-hotkey": "0.1.4",
     "lodash": "4.17.15",
     "lodash-es": "4.17.15",
-    "immutable": "4.0.0-rc.12",
     "prop-types": "15.7.2",
     "react-is": "16.9.0",
     "react-required-if": "1.0.3",
@@ -81,6 +81,7 @@
     "react-textarea-autosize": "7.1.0",
     "react-virtualized": "9.21.1",
     "slate": "0.47.4",
+    "slate-html-serializer": "^0.8.9",
     "slate-prop-types": "0.5.37",
     "slate-react": "0.22.4",
     "tiny-invariant": "1.0.6",
