chore: update deps

--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "dom-helpers": "5.1.0",
     "downshift": "3.2.14",
     "immutable": "4.0.0-rc.12",
-    "is-hotkey": "0.1.4",
+    "is-hotkey": "0.1.5",
     "lodash": "4.17.15",
     "lodash-es": "4.17.15",
     "prop-types": "15.7.2",
@@ -80,10 +80,10 @@
     "react-select": "3.0.4",
     "react-textarea-autosize": "7.1.0",
     "react-virtualized": "9.21.1",
-    "slate": "0.47.4",
-    "slate-html-serializer": "^0.8.9",
-    "slate-prop-types": "0.5.37",
-    "slate-react": "0.22.4",
+    "slate": "0.47.8",
+    "slate-html-serializer": "0.8.10",
+    "slate-prop-types": "0.5.41",
+    "slate-react": "0.22.8",
     "tiny-invariant": "1.0.6",
     "use-popper": "1.1.5",
     "warning": "4.0.3"
