--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "test": "cross-env NODE_ICU_DATA=./vendors/node_modules/full-icu jest --config jest.test.config.js",
     "test:watch": "cross-env NODE_ICU_DATA=./vendors/node_modules/full-icu jest --config jest.test.config.js --watch",
     "test:bundle": "jest --config jest.bundle.config.js",
+    "test:visual": "jest --config jest.visual.config.js",
     "bundlesize": "bundlesize",
     "test:bundle:watch": "jest --config jest.bundle.config.js --watch",
     "release:next": "yarn publish --tag next",
@@ -70,6 +71,8 @@
     "common-tags": "1.8.0",
     "dom-helpers": "5.1.0",
     "downshift": "3.3.1",
+    "immutable": "4.0.0-rc.12",
+    "is-hotkey": "0.1.6",
     "lodash": "4.17.15",
     "lodash-es": "4.17.15",
     "prop-types": "15.7.2",
@@ -78,6 +81,10 @@
     "react-select": "3.0.5",
     "react-textarea-autosize": "7.1.0",
     "react-virtualized": "9.21.1",
+    "slate": "0.47.8",
+    "slate-html-serializer": "0.8.10",
+    "slate-prop-types": "0.5.41",
+    "slate-react": "0.22.8",
     "tiny-invariant": "1.0.6",
     "use-popper": "1.1.5",
     "warning": "4.0.3"
