--- a/materials/internals/definition.yaml
+++ b/materials/internals/definition.yaml
@@ -145,6 +145,8 @@ states:
     description: 'When the element has invalid input'
   selected:
     description: 'When the element is selected'
+  inverted:
+    description: 'When the element has inverted colors'
 componentGroups:
   input:
     description: 'Input elements'
@@ -152,6 +154,8 @@ componentGroups:
     description: 'Tag elements'
   tag-warning:
     description: 'Tag elements with type warning'
+  text:
+    description: 'Text elements'
 
 decisionGroups:
   backgroundColors:
@@ -247,6 +251,9 @@ decisionGroups:
       font-color-for-tag-when-disabled:
         description: ''
         choice: color-neutral-60
+      font-color-for-text-when-inverted:
+        description: ''
+        choice: color-surface
 
   fontFamily:
     label: Font family
