chore: fix tests

--- a/package.json
+++ b/package.json
@@ -35,10 +35,11 @@
   ],
   "sideEffects": false,
   "scripts": {
+    "generate-icons": "node ./scripts/generate-icon-exports.js",
     "changelog": "conventional-changelog -p angular -u",
     "design-tokens:build": "node ./scripts/generate-custom-properties.js",
     "design-tokens:build:watch": "nodemon -e yaml --quiet --watch materials/internals --exec 'yarn design-tokens:build'",
-    "prebuild": "node ./scripts/generate-icon-exports.js && yarn design-tokens:build",
+    "prebuild": "yarn generate-icons && yarn design-tokens:build",
     "prestorybook:start": "node ./scripts/generate-icon-exports.js && yarn design-tokens:build",
     "storybook:build": "NODE_ENV=production build-storybook -o .public -s docs/assets",
     "build": "rimraf dist && cross-env NODE_ENV=production rollup --config",
@@ -53,6 +54,7 @@
     "format:js": "prettier --write '**/*.js'",
     "format:md": "prettier --write --parser markdown '**/*.md'",
     "format:yaml": "prettier --write --parser yaml '**/*.yaml'",
+    "pretest": "yarn generate-icons",
     "test": "jest --config jest.test.config.js",
     "test:watch": "jest --config jest.test.config.js --watch",
     "test:bundle": "jest --config jest.bundle.config.js",
