--- a/package.json
+++ b/package.json
@@ -68,7 +68,10 @@
   },
   "dependencies": {
     "@emotion/core": "10.0.22",
+    "@emotion/css": "10.0.22",
+    "@emotion/is-prop-valid": "0.8.5",
     "@emotion/styled": "10.0.23",
+    "@emotion/styled-base": "10.0.24",
     "common-tags": "1.8.0",
     "dom-helpers": "5.1.3",
     "downshift": "3.4.1",
@@ -198,7 +201,6 @@
     "rollup-plugin-cleanup": "3.1.1",
     "rollup-plugin-commonjs": "10.1.0",
     "rollup-plugin-json": "4.0.0",
-    "rollup-plugin-node-resolve": "5.2.0",
     "rollup-plugin-replace": "2.2.0",
     "serve": "11.2.0",
     "shelljs": "0.8.3",
