--- a/bundlesize.config.json
+++ b/bundlesize.config.json
@@ -3,6 +3,14 @@
     {
       "path": "./dist/ui-kit.esm.js",
       "maxSize": "167 kB"
+    },
+    {
+      "path": "./visual-testing-app/dist/ui-kit.js",
+      "maxSize": "167 kB"
+    },
+    {
+      "path": "./visual-testing-app/dist/vendors.js",
+      "maxSize": "355 kB"
     }
   ]
 }
