--- a/packages/collapsible-motion/package.json
+++ b/packages/collapsible-motion/package.json
@@ -11,10 +11,10 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@commercetools-uikit/hooks": "*",
     "@emotion/core": "10.0.22",
     "@emotion/styled": "10.0.23",
     "lodash": "4.17.15",
-    "lodash-es": "4.17.15",
     "prop-types": "15.7.2",
     "tiny-invariant": "1.0.6"
   },
