--- a/packages/collapsible-panel/package.json
+++ b/packages/collapsible-panel/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@commercetools-uikit/input-utils",
+  "name": "@commercetools-uikit/collapsible-panel",
   "version": "0.0.0",
   "description": "",
-  "main": "dist/input-utils.cjs.js",
-  "module": "dist/input-utils.esm.js",
+  "main": "dist/collapsible-panel.cjs.js",
+  "module": "dist/collapsible-panel.esm.js",
   "scripts": {
     "prebuild": "rimraf dist/**",
     "build": "cross-env NODE_ENV=production rollup -c ../../rollup.config.js -i ./index.js"
@@ -11,8 +11,11 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@commercetools-uikit/hooks": "*",
     "@emotion/core": "10.0.22",
-    "@commercetools-uikit/design-system": "*"
+    "@emotion/styled": "10.0.23",
+    "lodash": "4.17.15",
+    "prop-types": "15.7.2"
   },
   "peerDependencies": {
     "react": ">= 16.8.0"
