--- a/packages/inputs/async-select-input/package.json
+++ b/packages/inputs/async-select-input/package.json
@@ -1,18 +1,17 @@
 {
-  "name": "@commercetools-uikit/async-creatable-select-input",
+  "name": "@commercetools-uikit/async-select-input",
   "version": "0.0.0",
   "description": "",
-  "main": "dist/async-creatable-select-input.cjs.js",
-  "module": "dist/async-creatable-select-input.esm.js",
+  "main": "dist/async-select-input.cjs.js",
+  "module": "dist/async-select-input.esm.js",
   "scripts": {
     "prebuild": "rimraf dist/**",
-    "build": "cross-env NODE_ENV=production rollup -c ../../rollup.config.js -i ./index.js"
+    "build": "cross-env NODE_ENV=production rollup -c ../../../rollup.config.js -i ./index.js"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
     "@emotion/core": "10.0.22",
-    "@emotion/is-prop-valid": "0.8.5",
     "@emotion/styled": "10.0.23",
     "@commercetools-uikit/constraints": "*",
     "@commercetools-uikit/design-system": "*",
@@ -23,9 +22,7 @@
     "@commercetools-uikit/text": "*",
     "@commercetools-uikit/utils": "*",
     "lodash": "4.17.15",
-    "lodash-es": "4.17.15",
     "prop-types": "15.7.2",
-    "react-input-autosize": "^2.2.2",
     "react-select": "3.0.8"
   },
   "peerDependencies": {
