--- a/packages/inputs/checkbox-input/package.json
+++ b/packages/inputs/checkbox-input/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "@commercetools-uikit/table",
+  "name": "@commercetools-uikit/checkbox-input",
   "version": "0.0.0",
   "description": "",
-  "main": "dist/table.cjs.js",
-  "module": "dist/table.esm.js",
+  "main": "dist/checkbox-input.cjs.js",
+  "module": "dist/checkbox-input.esm.js",
   "scripts": {
     "prebuild": "rimraf dist/**",
-    "build": "cross-env NODE_ENV=production rollup -c ../../rollup.config.js -i ./index.js"
+    "build": "cross-env NODE_ENV=production rollup -c ../../../rollup.config.js -i ./index.js"
   },
   "author": "",
   "license": "MIT",
@@ -15,13 +15,10 @@
     "@emotion/styled": "10.0.23",
     "@commercetools-uikit/design-system": "*",
     "@commercetools-uikit/icons": "*",
-    "@commercetools-uikit/spacings": "*",
+    "@commercetools-uikit/select-utils": "*",
     "@commercetools-uikit/text": "*",
     "@commercetools-uikit/utils": "*",
-    "dom-helpers": "5.1.3",
-    "lodash": "4.17.15",
-    "prop-types": "15.7.2",
-    "react-virtualized": "9.21.1"
+    "prop-types": "15.7.2"
   },
   "peerDependencies": {
     "react": ">= 16.8.0"
