--- a/packages/inputs/creatable-select-input/package.json
+++ b/packages/inputs/creatable-select-input/package.json
@@ -1,29 +1,33 @@
 {
-  "name": "@commercetools-uikit/table",
+  "name": "@commercetools-uikit/creatable-select-input",
   "version": "0.0.0",
   "description": "",
-  "main": "dist/table.cjs.js",
-  "module": "dist/table.esm.js",
+  "main": "dist/creatable-select-input.cjs.js",
+  "module": "dist/creatable-select-input.esm.js",
   "scripts": {
     "prebuild": "rimraf dist/**",
-    "build": "cross-env NODE_ENV=production rollup -c ../../rollup.config.js -i ./index.js"
+    "build": "cross-env NODE_ENV=production rollup -c ../../../rollup.config.js -i ./index.js"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
     "@emotion/core": "10.0.22",
     "@emotion/styled": "10.0.23",
+    "@commercetools-uikit/constraints": "*",
     "@commercetools-uikit/design-system": "*",
     "@commercetools-uikit/icons": "*",
+    "@commercetools-uikit/input-utils": "*",
+    "@commercetools-uikit/select-utils": "*",
     "@commercetools-uikit/spacings": "*",
     "@commercetools-uikit/text": "*",
     "@commercetools-uikit/utils": "*",
-    "dom-helpers": "5.1.3",
     "lodash": "4.17.15",
     "prop-types": "15.7.2",
-    "react-virtualized": "9.21.1"
+    "react-select": "3.0.8"
   },
   "peerDependencies": {
-    "react": ">= 16.8.0"
+    "react": ">= 16.8.0",
+    "react-dom": ">= 16.8.0",
+    "react-intl": ">=3.0.0-beta.19 || 3.x"
   }
 }
