--- a/packages/inputs/date-input/package.json
+++ b/packages/inputs/date-input/package.json
@@ -1,34 +1,34 @@
 {
-  "name": "@commercetools-uikit/creatable-select-input",
+  "name": "@commercetools-uikit/date-input",
   "version": "0.0.0",
   "description": "",
-  "main": "dist/creatable-select-input.cjs.js",
-  "module": "dist/creatable-select-input.esm.js",
+  "main": "dist/date-input.cjs.js",
+  "module": "dist/date-input.esm.js",
   "scripts": {
     "prebuild": "rimraf dist/**",
-    "build": "cross-env NODE_ENV=production rollup -c ../../rollup.config.js -i ./index.js"
+    "build": "cross-env NODE_ENV=production rollup -c ../../../rollup.config.js -i ./index.js"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
     "@emotion/core": "10.0.22",
     "@emotion/styled": "10.0.23",
-    "@commercetools-uikit/constraints": "*",
     "@commercetools-uikit/design-system": "*",
     "@commercetools-uikit/icons": "*",
-    "@commercetools-uikit/input-utils": "*",
     "@commercetools-uikit/select-utils": "*",
-    "@commercetools-uikit/spacings": "*",
     "@commercetools-uikit/text": "*",
     "@commercetools-uikit/utils": "*",
-    "lodash": "4.17.15",
-    "lodash-es": "4.17.15",
+    "common-tags": "1.8.0",
+    "downshift": "3.4.1",
     "prop-types": "15.7.2",
-    "react-select": "3.0.8"
+    "react-is": "16.11.0",
+    "react-required-if": "1.0.3",
+    "tiny-invariant": "1.0.6",
+    "warning": "4.0.3"
   },
   "peerDependencies": {
+    "moment": "2.x",
     "react": ">= 16.8.0",
-    "react-dom": ">= 16.8.0",
     "react-intl": ">=3.0.0-beta.19 || 3.x"
   }
 }
