--- a/packages/spacings/package.json
+++ b/packages/spacings/package.json
@@ -12,7 +12,8 @@
   "license": "MIT",
   "dependencies": {
     "@emotion/core": "10.0.22",
-    "@commercetools-uikit/design-system": "*"
+    "@commercetools-uikit/design-system": "*",
+    "prop-types": "15.7.2"
   },
   "peerDependencies": {
     "react": ">= 16.8.0",
