--- a/packages/text/package.json
+++ b/packages/text/package.json
@@ -16,8 +16,7 @@
     "react-required-if": "1.0.3",
     "prop-types": "15.7.2",
     "common-tags": "1.8.0",
-    "lodash": "4.17.15",
-    "lodash-es": "4.17.15"
+    "lodash": "4.17.15"
   },
   "peerDependencies": {
     "react": ">= 16.8.0",
