--- a/packages/tooltip/package.json
+++ b/packages/tooltip/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@commercetools-uikit/select-input",
+  "name": "@commercetools-uikit/tooltip",
   "version": "0.0.0",
   "description": "",
-  "main": "dist/select-input.cjs.js",
-  "module": "dist/select-input.esm.js",
+  "main": "dist/tooltip.cjs.js",
+  "module": "dist/tooltip.esm.js",
   "scripts": {
     "prebuild": "rimraf dist/**",
     "build": "cross-env NODE_ENV=production rollup -c ../../rollup.config.js -i ./index.js"
@@ -12,20 +12,15 @@
   "license": "MIT",
   "dependencies": {
     "@emotion/core": "10.0.22",
-    "@emotion/is-prop-valid": "0.8.5",
     "@emotion/styled": "10.0.23",
-    "@commercetools-uikit/constraints": "*",
     "@commercetools-uikit/design-system": "*",
-    "@commercetools-uikit/icons": "*",
-    "@commercetools-uikit/input-utils": "*",
     "@commercetools-uikit/utils": "*",
     "lodash": "4.17.15",
-    "lodash-es": "4.17.15",
     "prop-types": "15.7.2",
-    "react-select": "3.0.8"
+    "react-is": "16.11.0",
+    "use-popper": "1.1.6"
   },
   "peerDependencies": {
-    "react": ">= 16.8.0",
-    "react-intl": ">=3.0.0-beta.19 || 3.x"
+    "react": ">= 16.8.0"
   }
 }
