chore: add some more packages

--- a/packages/ui-kit/package.json
+++ b/packages/ui-kit/package.json
@@ -41,10 +41,13 @@
     "@commercetools-uikit/constraints": "*",
     "@commercetools-uikit/design-system": "*",
     "@commercetools-uikit/hooks": "*",
+    "@commercetools-uikit/i18n": "*",
     "@commercetools-uikit/icons": "*",
     "@commercetools-uikit/input-utils": "*",
     "@commercetools-uikit/label": "*",
+    "@commercetools-uikit/link": "*",
     "@commercetools-uikit/loading-spinner": "*",
+    "@commercetools-uikit/primary-action-dropdown": "*",
     "@commercetools-uikit/messages": "*",
     "@commercetools-uikit/select-utils": "*",
     "@commercetools-uikit/spacings": "*",
