--- a/packages/ui-kit/package.json
+++ b/packages/ui-kit/package.json
@@ -33,13 +33,18 @@
     "tiny-invariant": "1.0.6",
     "use-popper": "1.1.6",
     "warning": "4.0.3",
+    "@commercetools-uikit/async-creatable-select-input": "*",
+    "@commercetools-uikit/async-select-input": "*",
     "@commercetools-uikit/avatar": "*",
     "@commercetools-uikit/buttons": "*",
     "@commercetools-uikit/card": "*",
     "@commercetools-uikit/collapsible": "*",
     "@commercetools-uikit/collapsible-motion": "*",
     "@commercetools-uikit/constraints": "*",
+    "@commercetools-uikit/creatable-select-input": "*",
     "@commercetools-uikit/design-system": "*",
+    "@commercetools-uikit/field-label": "*",
+    "@commercetools-uikit/field-errors": "*",
     "@commercetools-uikit/hooks": "*",
     "@commercetools-uikit/i18n": "*",
     "@commercetools-uikit/icons": "*",
@@ -50,6 +55,7 @@
     "@commercetools-uikit/primary-action-dropdown": "*",
     "@commercetools-uikit/messages": "*",
     "@commercetools-uikit/select-utils": "*",
+    "@commercetools-uikit/select-input": "*",
     "@commercetools-uikit/spacings": "*",
     "@commercetools-uikit/text": "*",
     "@commercetools-uikit/text-input": "*",
