--- a/packages/ui-kit/package.json
+++ b/packages/ui-kit/package.json
@@ -52,7 +52,9 @@
     "@commercetools-uikit/label": "*",
     "@commercetools-uikit/link": "*",
     "@commercetools-uikit/loading-spinner": "*",
+    "@commercetools-uikit/localized-money-input": "*",
     "@commercetools-uikit/primary-action-dropdown": "*",
+    "@commercetools-uikit/money-input": "*",
     "@commercetools-uikit/messages": "*",
     "@commercetools-uikit/select-utils": "*",
     "@commercetools-uikit/select-input": "*",
