--- a/packages/components/label/package.json
+++ b/packages/components/label/package.json
@@ -1,21 +1,20 @@
 {
-  "name": "@commercetools-uikit/loading-spinner",
+  "name": "@commercetools-uikit/label",
   "version": "0.0.0",
   "description": "",
-  "main": "dist/loading-spinner.cjs.js",
-  "module": "dist/loading-spinner.esm.js",
+  "main": "dist/label.cjs.js",
+  "module": "dist/label.esm.js",
   "scripts": {
     "prebuild": "rimraf dist/**",
-    "build": "cross-env NODE_ENV=production rollup -c ../../rollup.config.js -i ./index.js"
+    "build": "cross-env NODE_ENV=production rollup -c ../../../rollup.config.js -i ./index.js"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
     "@emotion/core": "10.0.22",
+    "@emotion/styled": "10.0.23",
     "@commercetools-uikit/design-system": "*",
-    "@commercetools-uikit/spacings": "*",
     "@commercetools-uikit/text": "*",
-    "@commercetools-uikit/utils": "*",
     "prop-types": "15.7.2"
   },
   "peerDependencies": {
