--- a/packages/components/internals/multiline-input/package.json
+++ b/packages/components/internals/multiline-input/package.json
@@ -6,7 +6,7 @@
   "module": "dist/multiline-input.esm.js",
   "scripts": {
     "prebuild": "rimraf dist/**",
-    "build": "cross-env NODE_ENV=production rollup -c ../../../rollup.config.js -i ./index.js"
+    "build": "cross-env NODE_ENV=production rollup -c ../../../../rollup.config.js -i ./index.js"
   },
   "author": "",
   "license": "MIT",
