--- a/packages/components/internals/rich-text-body/package.json
+++ b/packages/components/internals/rich-text-body/package.json
@@ -1,26 +1,27 @@
 {
-  "name": "@commercetools-uikit/calendar",
+  "name": "@commercetools-uikit/rich-text-body",
   "version": "0.0.0",
   "description": "",
-  "main": "dist/calendar.cjs.js",
-  "module": "dist/calendar.esm.js",
+  "main": "dist/rich-text-body.cjs.js",
+  "module": "dist/rich-text-body.esm.js",
   "scripts": {
     "prebuild": "rimraf dist/**",
-    "build": "cross-env NODE_ENV=production rollup -c ../../../rollup.config.js -i ./index.js"
+    "build": "cross-env NODE_ENV=production rollup -c ../../../../rollup.config.js -i ./index.js"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
     "@emotion/core": "10.0.22",
     "@emotion/styled": "10.0.23",
+    "@commercetools-uikit/constraints": "*",
     "@commercetools-uikit/design-system": "*",
     "@commercetools-uikit/icons": "*",
-    "@commercetools-uikit/text": "*",
-    "@commercetools-uikit/secondary-icon-button": "*",
-    "@commercetools-uikit/spacings": "*",
+    "@commercetools-uikit/spacings-inline": "*",
     "@commercetools-uikit/tooltip": "*",
-    "prop-types": "15.7.2"
-
+    "downshift": "3.4.1",
+    "prop-types": "15.7.2",
+    "react-required-if": "1.0.3",
+    "tiny-invariant": "1.0.6"
   },
   "peerDependencies": {
     "react": ">= 16.8.0",
