--- a/packages/components/internals/rich-text-plugins/package.json
+++ b/packages/components/internals/rich-text-plugins/package.json
@@ -6,7 +6,7 @@
   "module": "dist/rich-text-plugins.esm.js",
   "scripts": {
     "prebuild": "rimraf dist/**",
-    "build": "rimraf dist && cross-env NODE_ENV=production rollup -c ../../../rollup.config.js -i ./index.js"
+    "build": "rimraf dist && cross-env NODE_ENV=production rollup -c ../../../../rollup.config.js -i ./index.js"
   },
   "dependencies": {
     "@emotion/core": "10.0.22",
