--- a/packages/ui-kit/package.json
+++ b/packages/ui-kit/package.json
@@ -12,63 +12,69 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@emotion/core": "10.0.22",
-    "@emotion/styled": "10.0.23",
-    "common-tags": "1.8.0",
-    "dom-helpers": "5.1.3",
-    "downshift": "3.4.1",
-    "immutable": "4.0.0-rc.12",
-    "is-hotkey": "0.1.6",
-    "lodash": "4.17.15",
-    "prop-types": "15.7.2",
-    "react-is": "16.11.0",
-    "react-required-if": "1.0.3",
-    "react-select": "3.0.8",
-    "react-textarea-autosize": "7.1.2",
-    "react-virtualized": "9.21.1",
-    "slate": "0.47.9",
-    "slate-html-serializer": "0.8.11",
-    "slate-prop-types": "0.5.42",
-    "slate-react": "0.22.10",
-    "tiny-invariant": "1.0.6",
-    "use-popper": "1.1.6",
-    "warning": "4.0.3",
     "@commercetools-uikit/async-creatable-select-input": "*",
     "@commercetools-uikit/async-select-input": "*",
+    "@commercetools-uikit/async-creatable-select-field": "*",
+    "@commercetools-uikit/async-select-field": "*",
     "@commercetools-uikit/avatar": "*",
     "@commercetools-uikit/buttons": "*",
     "@commercetools-uikit/card": "*",
+    "@commercetools-uikit/checkbox-input": "*",
     "@commercetools-uikit/collapsible": "*",
     "@commercetools-uikit/collapsible-motion": "*",
+    "@commercetools-uikit/collapsible-panel": "*",
     "@commercetools-uikit/constraints": "*",
     "@commercetools-uikit/creatable-select-input": "*",
+    "@commercetools-uikit/creatable-select-field": "*",
+    "@commercetools-uikit/date-input": "*",
+    "@commercetools-uikit/date-time-input": "*",
+    "@commercetools-uikit/date-range-input": "*",
+    "@commercetools-uikit/date-field": "*",
+    "@commercetools-uikit/date-time-field": "*",
+    "@commercetools-uikit/date-range-field": "*",
     "@commercetools-uikit/design-system": "*",
     "@commercetools-uikit/field-label": "*",
     "@commercetools-uikit/field-errors": "*",
+    "@commercetools-uikit/grid": "*",
     "@commercetools-uikit/hooks": "*",
     "@commercetools-uikit/i18n": "*",
     "@commercetools-uikit/icons": "*",
     "@commercetools-uikit/input-utils": "*",
     "@commercetools-uikit/label": "*",
     "@commercetools-uikit/link": "*",
+    "@commercetools-uikit/localized-multiline-text-input": "*",
+    "@commercetools-uikit/localized-multiline-text-field": "*",
+    "@commercetools-uikit/localized-text-input": "*",
+    "@commercetools-uikit/localized-text-field": "*",
     "@commercetools-uikit/loading-spinner": "*",
     "@commercetools-uikit/localized-money-input": "*",
-    "@commercetools-uikit/primary-action-dropdown": "*",
     "@commercetools-uikit/money-input": "*",
+    "@commercetools-uikit/money-field": "*",
     "@commercetools-uikit/messages": "*",
-    "@commercetools-uikit/select-utils": "*",
+    "@commercetools-uikit/multiline-text-input": "*",
+    "@commercetools-uikit/multiline-text-field": "*",
+    "@commercetools-uikit/notifications": "*",
+    "@commercetools-uikit/number-input": "*",
+    "@commercetools-uikit/number-field": "*",
+    "@commercetools-uikit/password-input": "*",
+    "@commercetools-uikit/password-field": "*",
+    "@commercetools-uikit/primary-action-dropdown": "*",
     "@commercetools-uikit/select-input": "*",
+    "@commercetools-uikit/select-field": "*",
     "@commercetools-uikit/spacings": "*",
+    "@commercetools-uikit/rich-text-input": "*",
+    "@commercetools-uikit/localized-rich-text-input": "*",
+    "@commercetools-uikit/radio-input": "*",
+    "@commercetools-uikit/radio-field": "*",
+    "@commercetools-uikit/tag": "*",
+    "@commercetools-uikit/table": "*",
     "@commercetools-uikit/text": "*",
     "@commercetools-uikit/text-input": "*",
+    "@commercetools-uikit/text-field": "*",
+    "@commercetools-uikit/time-input": "*",
+    "@commercetools-uikit/time-field": "*",
+    "@commercetools-uikit/toggle-input": "*",
+    "@commercetools-uikit/tooltip": "*",
     "@commercetools-uikit/utils": "*"
-  },
-  "peerDependencies": {
-    "moment": "2.x",
-    "moment-timezone": "0.5.x",
-    "react": ">= 16.8.0",
-    "react-dom": ">= 16.8.0",
-    "react-intl": ">=3.0.0-beta.19 || 3.x",
-    "react-router-dom": "5.x"
   }
 }
