--- a/packages/components/fields/localized-multiline-text-field/package.json
+++ b/packages/components/fields/localized-multiline-text-field/package.json
@@ -21,6 +21,7 @@
     "@commercetools-uikit/spacings-stack": "*",
     "@commercetools-uikit/localized-multiline-text-input": "*",
     "@commercetools-uikit/utils": "*",
+    "common-tags": "1.8.0",
     "prop-types": "15.7.2",
     "react-required-if": "1.0.3"
   },
