--- a/packages/components/fields/password-field/package.json
+++ b/packages/components/fields/password-field/package.json
@@ -18,6 +18,7 @@
     "@commercetools-uikit/flat-button": "*",
     "@commercetools-uikit/field-label": "*",
     "@commercetools-uikit/field-errors": "*",
+    "@commercetools-uikit/hooks": "*",
     "@commercetools-uikit/icons": "*",
     "@commercetools-uikit/spacings-inline": "*",
     "@commercetools-uikit/spacings-stack": "*",
