--- a/packages/ui-kit/package.json
+++ b/packages/ui-kit/package.json
@@ -17,6 +17,7 @@
     "@commercetools-uikit/async-creatable-select-field": "*",
     "@commercetools-uikit/async-select-field": "*",
     "@commercetools-uikit/avatar": "*",
+    "@commercetools-uikit/base-table": "*",
     "@commercetools-uikit/buttons": "*",
     "@commercetools-uikit/card": "*",
     "@commercetools-uikit/checkbox-input": "*",
@@ -62,12 +63,14 @@
     "@commercetools-uikit/select-input": "*",
     "@commercetools-uikit/select-field": "*",
     "@commercetools-uikit/spacings": "*",
+    "@commercetools-uikit/stamp": "*",
     "@commercetools-uikit/rich-text-input": "*",
     "@commercetools-uikit/localized-rich-text-input": "*",
     "@commercetools-uikit/radio-input": "*",
     "@commercetools-uikit/radio-field": "*",
     "@commercetools-uikit/tag": "*",
     "@commercetools-uikit/table": "*",
+    "@commercetools-uikit/table-cell": "*",
     "@commercetools-uikit/text": "*",
     "@commercetools-uikit/text-input": "*",
     "@commercetools-uikit/text-field": "*",
