--- a/packages/components/collapsible-panel/package.json
+++ b/packages/components/collapsible-panel/package.json
@@ -11,7 +11,13 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@commercetools-uikit/collapsible-motion": "*",
+    "@commercetools-uikit/design-system": "*",
     "@commercetools-uikit/hooks": "*",
+    "@commercetools-uikit/icons": "*",
+    "@commercetools-uikit/spacings": "*",
+    "@commercetools-uikit/text": "*",
+    "@commercetools-uikit/utils": "*",
     "@emotion/core": "10.0.22",
     "@emotion/styled": "10.0.23",
     "lodash": "4.17.15",
