--- a/packages/components/fields/localized-text-field/package.json
+++ b/packages/components/fields/localized-text-field/package.json
@@ -18,9 +18,10 @@
     "@commercetools-uikit/field-label": "*",
     "@commercetools-uikit/field-errors": "*",
     "@commercetools-uikit/input-utils": "*",
-    "@commercetools-uikit/spacings-stack": "*",
+    "@commercetools-uikit/spacings": "*",
     "@commercetools-uikit/localized-text-input": "*",
     "@commercetools-uikit/utils": "*",
+    "common-tags": "1.8.0",
     "prop-types": "15.7.2",
     "react-required-if": "1.0.3"
   },
